feature: added new spring security keys and base configuration

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,8 @@
 spring.application.name=labpcp
 
+jwt.public.key=classpath:app.pub
+jwt.private.key=classpath:app.key
+
 spring.datasource.url=jdbc:postgresql://localhost:1432/labpcp
 spring.datasource.username=meuUsuario
 spring.datasource.password=minhaSenha
@@ -9,3 +12,5 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.show-sql=true
 spring.jpa.open-in-view=false
 spring.sql.init.mode=always
+
+#docker run --name labpcp -e POSTGRES_DB=labpcp -e POSTGRES_USER=meuUsuario -e POSTGRES_PASSWORD=minhaSenha -p 1432:5432 -d postgres
