--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,10 +3,16 @@ spring.application.name=labpcp
 jwt.public.key=classpath:app.pub
 jwt.private.key=classpath:app.key
 
-spring.datasource.url=jdbc:postgresql://localhost:1432/labpcp
-spring.datasource.username=meuUsuario
-spring.datasource.password=minhaSenha
-spring.jpa.properties.hibernate.format_sql=true
+spring.datasource.url=jdbc:postgresql://localhost:1432/database
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
-spring.jpa.open-in-view=false
+spring.jpa.hibernate.ddl-auto=update
 spring.sql.init.mode=always
+spring.jpa.defer-datasource-initialization=true
+
+server.port=8081
+
+#docker run --name database -e POSTGRES_PASSWORD=minhaSenha -e POSTGRES_USER=meuUsuario -e POSTGRES_DB=labpcp -p 1432:5432 -d postgres
