feat: create docente controller entity repository dtos service

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=labpcp
 jwt.public.key=classpath:app.pub
 jwt.private.key=classpath:app.key
 
-spring.datasource.url=jdbc:postgresql://localhost:1432/database
+spring.datasource.url=jdbc:postgresql://localhost:1432/${DB_NAME}
 spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
