--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,12 +3,9 @@ spring.application.name=labpcp
 jwt.public.key=classpath:app.pub
 jwt.private.key=classpath:app.key
 
-#spring.datasource.url=jdbc:postgresql://localhost:1432/${DB_NAME}
-#spring.datasource.username=${DB_USERNAME}
-#spring.datasource.password=${DB_PASSWORD}
-spring.datasource.url=jdbc:postgresql://localhost:1432/labpcp
-spring.datasource.username=meuUsuario
-spring.datasource.password=minhaSenha
+spring.datasource.url=jdbc:postgresql://localhost:1432/${DB_NAME}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
