--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
-DB_NAME=database
+DB_URL=jdbc:postgresql://localhost:1432/database
 DB_USERNAME=meuUsuario
 DB_PASSWORD=minhaSenha
+
+SERVER_PORT=8080
