hotfix: fix start test

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,10 +9,10 @@ spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.hibernate.ddl-auto=update
 spring.sql.init.mode=always
 spring.jpa.defer-datasource-initialization=true
 
-#server.port=8081
+server.port=${PORT}
 
 #docker run --name database -e POSTGRES_PASSWORD=minhaSenha -e POSTGRES_USER=meuUsuario -e POSTGRES_DB=labpcp -p 1432:5432 -d postgres
