feature: tests materia

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,12 @@
-DB_NAME=database
-DB_USERNAME=meuUsuario
-DB_PASSWORD=minhaSenha
+#Production
+DB_NAME=
+DB_USERNAME=
+DB_PASSWORD=
+PORT=
 
-PORT=8080
+#Test
+DB_NAME_TEST=databasetest
+DB_USERNAME_TEST=meuUsuario
+DB_PASSWORD_TEST=minhaSenha
+
+PORT_TEST=8082
