--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,28 @@
 version: '3.8'
 
 services:
-  db:
+
+  app:
+    build: .
+    environment:
+      DB_URL: jdbc:postgresql://fullstack-gestao-de-ensino-labpcp:5432/database
+      DB_USERNAME: meuUsuario
+      DB_PASSWORD: minhaSenha
+      SERVER_PORT: 8080
+    ports:
+      - "8080:8080"
+    depends_on:
+      - postgres
+
+  postgres:
     image: postgres:latest
     container_name: fullstack-gestao-de-ensino-labpcp
     ports:
       - "1432:5432"
-    env_file:
-      - .env
     environment:
       POSTGRES_DB: database
-      POSTGRES_USER: ${DB_USERNAME}
-      POSTGRES_PASSWORD: ${DB_PASSWORD}
+      POSTGRES_USER: meuUsuario
+      POSTGRES_PASSWORD: minhaSenha
     volumes:
       - postgres_data:/var/lib/postgresql/data
 
