--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,14 +3,17 @@ spring.application.name=labpcp
 jwt.public.key=classpath:app.pub
 jwt.private.key=classpath:app.key
 
-spring.datasource.url=${DB_URL}
-spring.datasource.username=${DB_USERNAME}
-spring.datasource.password=${DB_PASSWORD}
+#spring.datasource.url=${DB_URL}
+#spring.datasource.username=${DB_USERNAME}
+#spring.datasource.password=${DB_PASSWORD}
+spring.datasource.url=jdbc:postgresql://localhost:1432/labpcp
+spring.datasource.username=meuUsuario
+spring.datasource.password=minhaSenha
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.show-sql=true
 spring.sql.init.mode=always
 spring.jpa.defer-datasource-initialization=true
 
-server.port=${SERVER_PORT}
+#server.port=${SERVER_PORT}
 
 #docker run --name database -e POSTGRES_PASSWORD=minhaSenha -e POSTGRES_USER=meuUsuario -e POSTGRES_DB=labpcp -p 1432:5432 -d postgres
